Added DrawAPI class

--- a/Desktop-prj1/Desktop-prj1.vcxproj.filters
+++ b/Desktop-prj1/Desktop-prj1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Draw.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DrawAPI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Desktop-prj1.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Draw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DrawAPI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
