--- a/Desktop-prj1/Desktop-prj1.vcxproj
+++ b/Desktop-prj1/Desktop-prj1.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="Desktop-prj1.h" />
     <ClInclude Include="Draw.h" />
+    <ClInclude Include="DrawAPI.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
@@ -157,6 +158,7 @@
   <ItemGroup>
     <ClCompile Include="Desktop-prj1.cpp" />
     <ClCompile Include="Draw.cpp" />
+    <ClCompile Include="DrawAPI.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
